Render prefixes from Luckperms, add config, fix project setup

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,8 @@
 name: TurtleServer
-main: de.petropia.turtleServer.TurtleServer
+main: de.petropia.turtleServer.server.TurtleServer
 author: Professor_Sam
 version: ${project.version}
+description: "Core system of petropia.de"
+depend:
+  - "LuckPerms"
 api-version: 1.19
