Api for custom name color

--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,20 @@
 
     <groupId>de.petropia</groupId>
     <artifactId>TurtleServer</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>petropia</id>
+            <url>http://repo.petropia.de/releases</url>
+        </repository>
+    </distributionManagement>
 
     <repositories>
         <repository>
