--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,3 +6,7 @@ description: "Core system of petropia.de"
 depend:
   - "LuckPerms"
 api-version: 1.19
+commands:
+  player:
+    permission: TurtleServer.command.player
+    description: Manage player cache and player info
