--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -17,7 +17,7 @@ jobs:
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
       - name: Publish package
-        run: mvn --batch-mode clean install publish
+        run: mvn --batch-mode clean install deploy
         env:
           MAVEN_PASSWORD: ${{ secrets.MAVEN_DEPLOYMENT_TOKEN }}
           MAVEN_USERNAME: ${{ secrets.MAVEN_DEPLOYMENT_USERNAME }}
