Implement async world loading from DB

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,6 +13,8 @@ commands:
     description: "Access turtleServer internals"
   stats:
     description: "Show your stats"
+  world:
+    description: "Manage worlds from db"
 permissions:
   TurtleServer.debug:
     description: "Allow player to see debug message"
@@ -20,3 +22,5 @@ permissions:
     description: "Use command to access TurtleServer internals"
   TurtleServer.bypass.commandblock:
     description: "Bypass command ristriction"
+  TurtleServer.WorldCommand:
+    description: "Save and Load/Copy worlds"
