--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.petropia</groupId>
     <artifactId>TurtleServer</artifactId>
-    <version>1.1.6</version>
+    <version>1.1.7</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -112,6 +112,7 @@
                                 <includes>
                                     <include>org.mongodb</include>
                                     <include>dev.morphia.morphia</include>
+                                    <include>net.lingala.zip4j</include>
                                 </includes>
                             </artifactSet>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
