--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
     </repositories>
     <dependencies>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+        <dependency>
             <groupId>de.dytanic.cloudnet</groupId>
             <artifactId>cloudnet-wrapper-jvm</artifactId>
             <version>3.4.5-RELEASE</version>
