--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
     </repositories>
     <dependencies>
         <dependency>
+            <groupId>fr.mrmicky</groupId>
+            <artifactId>fastboard</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
@@ -118,6 +123,7 @@
                                     <include>org.mongodb</include>
                                     <include>dev.morphia.morphia</include>
                                     <include>net.lingala.zip4j</include>
+                                    <include>fr.mrmicky</include>
                                 </includes>
                             </artifactSet>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
