--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
             <id>cloudnet-releases</id>
             <url>https://repo.cloudnetservice.eu/repository/releases/</url>
         </repository>
+            <repository>
+                <id>repo</id>
+                <url>https://repo.mattstudios.me/artifactory/public/</url>
+            </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -87,6 +91,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>dev.triumphteam</groupId>
+            <artifactId>triumph-gui</artifactId>
+            <version>3.1.4</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
@@ -114,6 +123,7 @@
                                     <include>dev.morphia.morphia</include>
                                     <include>net.lingala.zip4j</include>
                                     <include>fr.mrmicky</include>
+                                    <include>dev.triumphteam</include>
                                 </includes>
                             </artifactSet>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
