--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.petropia</groupId>
     <artifactId>TurtleServer</artifactId>
-    <version>1.1.7</version>
+    <version>1.1.8</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -38,52 +38,52 @@
     <dependencies>
         <dependency>
             <groupId>fr.mrmicky</groupId>
-            <artifactId>fastboard</artifactId>
+            <artifactId>fastboard</artifactId> <!--https://github.com/MrMicky-FR/FastBoard -->
             <version>1.2.1</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
+            <artifactId>commons-io</artifactId> <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
             <version>2.11.0</version>
         </dependency>
         <dependency>
             <groupId>de.dytanic.cloudnet</groupId>
-            <artifactId>cloudnet-wrapper-jvm</artifactId>
+            <artifactId>cloudnet-wrapper-jvm</artifactId> <!-- https://cloudnetservice.eu/docs/3.4/api/start/ -->
             <version>3.4.5-RELEASE</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>de.dytanic.cloudnet</groupId>
-            <artifactId>cloudnet-bridge</artifactId>
+            <artifactId>cloudnet-bridge</artifactId> <!-- https://cloudnetservice.eu/docs/3.4/api/start/ -->
             <version>3.4.5-RELEASE</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>dev.morphia.morphia</groupId>
-            <artifactId>morphia-core</artifactId>
-            <version>2.2.9</version>
+            <artifactId>morphia-core</artifactId> <!-- https://github.com/MorphiaOrg/morphia -->
+            <version>2.3.0</version>
         </dependency>
         <dependency>
             <groupId>net.luckperms</groupId>
-            <artifactId>api</artifactId>
+            <artifactId>api</artifactId> <!-- https://mvnrepository.com/artifact/net.luckperms/api -->
             <version>5.4</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.papermc.paper</groupId>
-            <artifactId>paper-api</artifactId>
+            <artifactId>paper-api</artifactId> <!-- https://papermc.io/using-the-api -->
             <version>1.19-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.lingala.zip4j</groupId>
-            <artifactId>zip4j</artifactId>
-            <version>2.11.2</version>
+            <artifactId>zip4j</artifactId> <!-- https://github.com/srikanth-lingala/zip4j -->
+            <version>2.11.5</version>
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-            <version>8.0.31</version>
+            <version>8.0.32</version> <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
             <exclusions>
                 <exclusion>
                     <groupId>com.google.protobuf</groupId>
@@ -93,7 +93,7 @@
         </dependency>
         <dependency>
             <groupId>dev.triumphteam</groupId>
-            <artifactId>triumph-gui</artifactId>
+            <artifactId>triumph-gui</artifactId> <!-- https://github.com/TriumphTeam/triumph-gui -->
             <version>3.1.4</version>
         </dependency>
     </dependencies>
