--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -16,8 +16,8 @@ jobs:
           server-id: petropia
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
-      - name: Publish package
-        run: mvn --batch-mode clean install deploy
+      - name: Publish to repo.petropia.de
+        run: mvn clean javadoc:jar source:jar deploy -DadditionalJOption=-Xdoclint:none
         env:
           MAVEN_PASSWORD: ${{ secrets.MAVEN_DEPLOYMENT_TOKEN }}
           MAVEN_USERNAME: ${{ secrets.MAVEN_DEPLOYMENT_USERNAME }}
