--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,4 +1,4 @@
-name: Publish to repo.petropia.de
+name: Publish to repo.petropia.net
 on:
   push:
     branches: [master]
@@ -16,7 +16,7 @@ jobs:
           server-id: petropia
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
-      - name: Publish to repo.petropia.de
+      - name: Publish to repo.petropia.net
         run: mvn clean javadoc:jar source:jar deploy -DadditionalJOption=-Xdoclint:none
         env:
           MAVEN_PASSWORD: ${{ secrets.MAVEN_DEPLOYMENT_TOKEN }}
